# omero-isa

./: .gitignore  README.md  i_investigation.json  pyproject.toml  todo.md
.github/workflows/: build_and_test.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  EXAMPLES.md  i_investigation_example_1.json
src/omero_isa/: __init__.py  cli.py  isa_investigation_importer.py  isa_mapping.py  isa_packer.py  roi.py
test/: abstract_isa_test.py  test_cli.py  test_isa_packer.py  test_isa_study_importer.py  test_omero_isa_mapper.py
test/data/data_to_import_1/: i_investigation.json
test/data/data_to_import_1/assays/my-assay-with-annotations/dataset/: 3065.tiff  3065_roidata.json  3731.tiff  3731_roidata.json  4633.tiff  4633_roidata.json
test/data/data_to_import_1/assays/my-first-assay/dataset/: 3062.tiff  3063.tiff  3064.tiff  3728.tiff  3729.tiff  3730.tiff  4630.tiff  4631.tiff  4632.tiff
